# hello-world-websocket

./: README.md  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  websocket.rs
